# repermon

./: .gitignore  .pre-commit-config.yaml  MISSION.md  README.md  dagger.json  devbox.json  pyproject.toml
.dagger/build_ci/: pyproject.toml
.dagger/build_ci/src/build_ci/: __init__.py  main.py
.dagger/ci/: dagger.json  pyproject.toml
.dagger/ci/src/ci/: __init__.py  main.py
.dagger/kubernetes/: dagger.json  pyproject.toml
.dagger/kubernetes/src/kubernetes/: __init__.py  main.py
.dagger/local-dev/: dagger.json  pyproject.toml
.dagger/local-dev/src/local_dev/: __init__.py  main.py
.github/workflows/: pr-checks.yaml
kubernetes/: crd.yaml  rbac.yaml
src/: main.py  operator.py
