[project]
name = "aiops"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "mypy==1.16.1",
  "mypy-extensions==1.1.0",
  "pathspec==0.12.1",
  "typing-extensions==4.14.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.3",
]
